exports[`test should render one flow 1`] = `
<div
  className="pull-right">
  <ConciseIssueLocationBadge
    count={3} />
</div>
`;

exports[`test should render only secondary locations 1`] = `
<div
  className="pull-right">
  <ConciseIssueLocationBadge
    count={3} />
</div>
`;

exports[`test should render several flows 1`] = `
<div
  className="pull-right">
  <ConciseIssueLocationBadge
    count={3} />
  <ConciseIssueLocationBadge
    count={2} />
  <ConciseIssueLocationBadge
    count={3} />
</div>
`;
